--- a/INF253/tarea2/Tarea2LP_202004502-k/makefile
+++ b/INF253/tarea2/Tarea2LP_202004502-k/makefile
@@ -1,18 +1,18 @@
 
 run.out: main.o Unario.o Frec.o Inc.o
-	gcc main.o Unario.o Frec.o Inc.o -o  run.out -Wall -lm
+	gcc main.o Unario.o Frec.o Inc.o -o  run.out -Wall -Wextra -lm
 
 Unario.o: Unario.c Unario.h
-	gcc -c Unario.c -Wall -lm
+	gcc -c Unario.c -Wall -Wextra
 
 Frec.o: Frec.c Frec.h
-	gcc -c Frec.c -Wall -lm
+	gcc -c Frec.c -Wall -Wextra
 
 Inc.o: Inc.c Inc.h
-	gcc -c Inc.c -Wall -lm
+	gcc -c Inc.c -Wall -Wextra
 
 main.o: main.c 
-	gcc -c main.c -Wall -lm
+	gcc -c main.c -Wall -Wextra -lm
 
 clean: 
 	rm *.o *.out
